# in-hand-manip

./: README.md
franka_description/robots/: hand.xacro
gripper/: package.xml
gripper/config/: controller.yaml
gripper/launch/: display.launch  gazebo.launch  manipulation_test.launch  robot_control.yaml
gripper/urdf/: gripper.urdf
gripper_controls/: CMakeLists.txt  package.xml
gripper_controls/include/gripper_controls/: Hand.cpp  Hand.h
gripper_controls/launch/: controller.launch
gripper_controls/src/: high_controller.cpp  low_controller.cpp  main.cpp
gripper_controls/srv/: GetFriction.srv
moveit_planner/: CMakeLists.txt
moveit_planner/include/: moveit_planner.hpp
moveit_planner/src/: gripper_controls.cpp  moveit_planner.cpp  ui_draft.cpp
object_description/: CMakeLists.txt  package.xml
object_description/urdf/: block.urdf  long_block.urdf  table.urdf
panda_gazebo/: CMakeLists.txt  package.xml
panda_gazebo/config/: panda_control.yaml
panda_gazebo/launch/: collision.launch  custom.launch  main.launch  main2.launch  wooden.launch
panda_gazebo/worlds/: custom.world  manip_world.world  manip_world2.world  manip_world3.world
panda_moveit_config/: .setup_assistant
panda_moveit_config/config/: joint_limits.yaml  panda_arm.xacro  panda_controllers.yaml
panda_moveit_config/launch/: planning_context.launch
simulation_plugins/: CMakeLists.txt  package.xml
simulation_plugins/src/: friction_plugin.cc
